About Us, footer,image changes

--- a/about.html
+++ b/about.html
@@ -20,6 +20,17 @@
 
     </head>
     <body>
+         <div class="container">
+            <div class="row" style="background-color: green;">
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                    <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
+                    <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
+                </div>     
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                    <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
+                </div>        
+            </div>
+        </div>
         <div id="wrapper">
 
             <!-- start header -->
@@ -66,8 +77,8 @@
                             <div class="col-md-12">
                                 <div class="about-logo">
                                     <h3>We are awesome <span class="color">TEAM</span></h3>
-                                    <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
-                                    <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
+                                    <p>We are a team of eduprenuers, who are working in education field since last many years and     enriching their students with the light of their knowledge and wisdom.</p>
+                                    <p>As an educational institute we focus on the students all vertical development and practical knowledge of the concepts.</p>
                                 </div>  
                             </div>
                         </div>  
@@ -75,19 +86,11 @@
 
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="img/section-image-1.png" alt="">
+                                <img src="img/aboutus.png" alt="">
                                 <div class="space"></div>
                             </div>
                             <div class="col-md-6">
-                                <p>Lorem ipsum dolor sit amet, cadipisicing  sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde fuga error commodi architecto, laudantium culpa tenetur at id, beatae pet.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. adipisicing  sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium,m deserunt.</p>
-                                <ul class="list-unstyled">
-                                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum enimdolor sit amet</li>
-                                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Explicabo deleniti neque aliquid</li>
-                                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Consectetur adipisicing elit</li>
-                                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Quo issimos molest quibusdam temporibus</li>
-                                </ul>
+                                <p>Without any shadow of doubt, our faculties are the members of the teaching community who impart progress into the students. Drawn from the reputed universities of India, the highly qualified and experienced faculties are the greatest asset of the Prayas Institute of Education.</p>
                             </div>
                         </div>	
                         <br/> 
@@ -120,57 +123,46 @@
                                         <!-- Panel heading -->
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
-                                                <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseOne-alt3">
-                                                    <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 1
+                                                <a href="Academic_courses.html">
+                                                    <i class="fa fa-angle-right"></i>
+                                                    Academic Classes
                                                 </a>
                                             </h4>
                                         </div>
                                         <div id="collapseOne-alt3" class="panel-collapse collapse">
                                             <!-- Panel body -->
                                             <div class="panel-body">
-                                                Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+
                                             </div>
                                         </div>
                                     </div>
                                     <div class="panel">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
-                                                <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseTwo-alt3">
-                                                    <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 2
+                                                <a href="Competitive_courses.html">
+                                                    <i class="fa fa-angle-right"></i>
+                                                    Competitive Exam Class
                                                 </a>
                                             </h4>
                                         </div>
                                         <div id="collapseTwo-alt3" class="panel-collapse collapse">
                                             <div class="panel-body">
-                                                Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+
                                             </div>
                                         </div>
                                     </div>
                                     <div class="panel">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
-                                                <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseThree-alt3">
-                                                    <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 3
+                                                <a href="Entrance_courses.html">
+                                                    <i class="fa fa-angle-right"></i>
+                                                    Entrance Exam Classes
                                                 </a>
                                             </h4>
                                         </div>
                                         <div id="collapseThree-alt3" class="panel-collapse collapse">
                                             <div class="panel-body">
-                                                Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="panel">
-                                        <div class="panel-heading">
-                                            <h4 class="panel-title">
-                                                <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseFour-alt3">
-                                                    <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 4
-                                                </a>
-                                            </h4>
-                                        </div>
-                                        <div id="collapseFour-alt3" class="panel-collapse collapse">
-                                            <div class="panel-body">
-                                                Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+
                                             </div>
                                         </div>
                                     </div>
@@ -183,29 +175,29 @@
                                 <div class="block-heading-two">
                                     <h3><span>Our Expertise</span></h3>
                                 </div>								
-                                <h6>Web Development</h6>
+                                <h6>Teaching</h6>
                                 <div class="progress pb-sm">
                                     <!-- White color (progress-bar-white) -->
-                                    <div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                        <span class="sr-only">40% Complete (success)</span>
+                                    <div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                        <span class="sr-only">100% Complete (success)</span>
                                     </div>
                                 </div>
-                                <h6>Designing</h6>
+                                <h6>Academic Content Writing</h6>
                                 <div class="progress pb-sm">
-                                    <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                        <span class="sr-only">40% Complete (success)</span>
+                                    <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                        <span class="sr-only">100% Complete (success)</span>
                                     </div>
                                 </div>
-                                <h6>User Experience</h6>
+                                <h6>User Mentoring</h6>
                                 <div class="progress pb-sm">
-                                    <div class="progress-bar progress-bar-lblue" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                        <span class="sr-only">40% Complete (success)</span>
+                                    <div class="progress-bar progress-bar-lblue" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                        <span class="sr-only">100% Complete (success)</span>
                                     </div>
                                 </div>
-                                <h6>Development</h6>
+                                <h6>Counselling</h6>
                                 <div class="progress pb-sm">
-                                    <div class="progress-bar progress-bar-yellow" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-                                        <span class="sr-only">40% Complete (success)</span>
+                                    <div class="progress-bar progress-bar-yellow" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                        <span class="sr-only">100% Complete (success)</span>
                                     </div>
                                 </div>
                             </div>
@@ -227,44 +219,37 @@
 
                         <div class="team-six">
                             <div class="row">
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-md-4 col-sm-6">
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
                                         <img class="img-responsive" src="img/team1.jpg" alt="">
                                         <!-- Name -->
-                                        <h4>Johne Doe</h4>
-                                        <span class="deg">Creative</span> 
+                                        <h4>Sanjeev Kumar Singh</h4>
+                                        <span class="deg">B. Tech, MBA<br>Founder <br> Prayas Institute of Education </span> 
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-md-4 col-sm-6">
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
                                         <img class="img-responsive" src="img/team2.jpg" alt="">
                                         <!-- Name -->
-                                        <h4>Jennifer</h4>
-                                        <span class="deg">Programmer</span> 
+                                        <h4>Arpan Mishra</h4>
+                                        <span class="deg">
+                                        B.Tech, M.Tech, Ph.D (P)<br>
+                                        Co-Founder/Academic Director<br>
+                                        Prayas Institute of Education</span> 
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-md-4 col-sm-6">
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
                                         <img class="img-responsive" src="img/team3.jpg" alt="">
                                         <!-- Name -->
-                                        <h4>Christean</h4>
-                                        <span class="deg">CEO</span> 
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6">
-                                    <!-- Team Member -->
-                                    <div class="team-member">
-                                        <!-- Image -->
-                                        <img class="img-responsive" src="img/team4.jpg" alt="">
-                                        <!-- Name -->
-                                        <h4>Kerinele rase</h4>
-                                        <span class="deg">Manager</span> 
+                                        <h4>Shubham Tripathi</h4>
+                                        <span class="deg">B.Tech, MBA<br>Founder  Manager<br> Gramin Vikas Foundation</span> 
                                     </div>
                                 </div>
                             </div>
@@ -277,7 +262,7 @@
 
                 </div>
             </section>
-            <footer>
+            <footer><b>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4" align="center">
@@ -288,7 +273,8 @@
                                         A/49, Near Railway Crossing,<br>
                                         Phardhan, Lakhimpur Kheri
                                     </p><br>
-                                    Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
+                                    Mobile:<a href="tel:+919956176774"> +91- 9956176774</a> ,
+                                           <a href="tel:+919140779702"> +91-9140779702</a><br>
                                     E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                 </address>
                             </div>
@@ -297,9 +283,9 @@
                             <div class="widget">
                                 <h5 class="widgetheading text-info">Our Courses</h5>
                                 <ul class="link-list">
-                                    <li><a href="#">Academic Classes</a></li>
-                                    <li><a href="#">Competitive Exam Class</a></li>
-                                    <li><a href="#">Entrance Exam Classes</a></li>
+                                    <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                    <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                    <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -339,7 +325,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div></b>
             </footer>
         </div>
         <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
