--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pryas Institute of Education</title>
+        <title>Prayas Institute of Education</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
         <meta name="author" content="pradeep kumar" />
@@ -16,6 +16,17 @@
         <!--end css -->
     </head>
     <body>
+        <div class="container">
+            <div class="row" style="background-color: green;">
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                    <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
+                    <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
+                </div>     
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                    <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
+                </div>        
+            </div>
+        </div>
         <div id="wrapper">
             <!-- start header -->
             <header>
@@ -33,7 +44,7 @@
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="index.html">Home</a></li> 
                                 <li><a href="objective.html">Objective</a></li>
-                                 <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                <li><a href="Academic_courses.html">Academic Classes</a></li>
                                 <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
                                 <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
                                 <li><a href="about.html">About Us</a></li>
@@ -52,8 +63,8 @@
                             <img src="img/slides/1.jpg" alt="" />
                             <div class="flex-caption">
                                 <div class="item_introtext"> 
-                                    <strong>Your Kids Buddy </strong>
-                                    <p>The best educational template</p> </div>
+                                    <strong>Our Institute </strong>
+                                    <p>The best educational institue</p> </div>
                             </div>
                         </li>
                         <li>
@@ -61,15 +72,15 @@
                             <div class="flex-caption">
                                 <div class="item_introtext"> 
                                     <strong>All-round Growth</strong>
-                                    <p>Get all courses with on-line content</p> </div>
+                                    <p>Get all courses with smart content</p> </div>
                             </div>
                         </li>
                         <li>
                             <img src="img/slides/3.jpg" alt="" />
                             <div class="flex-caption">
                                 <div class="item_introtext"> 
-                                    <strong>Balanced Schooling</strong>
-                                    <p>Awesome Template get it know</p> </div>
+                                    <strong>Balanced Teaching</strong>
+                                    <p>Awesome teaching get it know</p> </div>
                             </div>
                         </li>
                     </ul>
@@ -212,7 +223,7 @@
                     </div>
                 </div>
             </section>
-            <footer>
+            <footer><b>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4" align="center">
@@ -223,7 +234,8 @@
                                         A/49, Near Railway Crossing,<br>
                                         Phardhan, Lakhimpur Kheri
                                     </p><br>
-                                    Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
+                                    Mobile:<a href="tel:+919956176774"> +91- 9956176774</a> ,
+                                    <a href="tel:+919140779702"> +91-9140779702</a><br>
                                     E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                 </address>
                             </div>
@@ -232,9 +244,9 @@
                             <div class="widget">
                                 <h5 class="widgetheading text-info">Our Courses</h5>
                                 <ul class="link-list">
-                                    <li><a href="#">Academic Classes</a></li>
-                                    <li><a href="#">Competitive Exam Class</a></li>
-                                    <li><a href="#">Entrance Exam Classes</a></li>
+                                    <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                    <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                    <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -274,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div></b>
             </footer>
         </div>
         <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
