--- a/objective.html
+++ b/objective.html
@@ -14,6 +14,17 @@
         <link href="css/style.css" rel="stylesheet" />
     </head>
     <body>
+         <div class="container">
+            <div class="row" style="background-color: green;">
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                    <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
+                    <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
+                </div>     
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                    <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
+                </div>        
+            </div>
+        </div>
         <div id="wrapper">
             <!-- start header -->
             <header>
@@ -59,10 +70,10 @@
                     The ethos of Prayas Institute of Education is to perceive the potential in each understudy and give the highest caliber of training to enable them to succeed. We are here to enable our understudies to accomplish their full scholarly potential utilizing one of a kind instructing strategies. Our educators comprise of qualified instructors, experts and current students. We accept that taking in a subject from alternate points of view permits an understudy to completely comprehend the theme. We don't sell dreams; rather we help our understudies progress in the direction of them.
                     </p><br><p>
                     Our fundamental objective at Prayas Institute of Education is to guarantee that we can make a situation that will be moving to our understudies and can give them the certainty and excitement to accomplish the most noteworthy potential outcomes. Our instructors are experienced, exceptionally scholastic and endeavor to offer the best quality training.
-                    </p><b><br>
-                    </div>
-                    </section>
-                <footer>
+                    </p><br>
+                </div>
+            </section>
+            <footer><b>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4" align="center">
@@ -73,7 +84,8 @@
                                         A/49, Near Railway Crossing,<br>
                                         Phardhan, Lakhimpur Kheri
                                     </p><br>
-                                    Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
+                                    Mobile:<a href="tel:+919956176774"> +91- 9956176774</a> ,
+                                    <a href="tel:+919140779702"> +91-9140779702</a><br>
                                     E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                 </address>
                             </div>
@@ -82,9 +94,9 @@
                             <div class="widget">
                                 <h5 class="widgetheading text-info">Our Courses</h5>
                                 <ul class="link-list">
-                                    <li><a href="#">Academic Classes</a></li>
-                                    <li><a href="#">Competitive Exam Class</a></li>
-                                    <li><a href="#">Entrance Exam Classes</a></li>
+                                    <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                    <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                    <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -125,6 +137,7 @@
                         </div>
                     </div>
                 </div>
+                </b>
             </footer>
         </div>
         <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
