--- a/Academic_courses.html
+++ b/Academic_courses.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Prayas Institute of Education</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="" />
-<meta name="author" content="http://webthemez.com" />
- 
-<link href="css/bootstrap.min.css" rel="stylesheet" />
-<link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
-<link href="css/jcarousel.css" rel="stylesheet" />
-<link href="css/flexslider.css" rel="stylesheet" />
-<link href="css/style.css" rel="stylesheet" />
- 
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <title>Prayas Institute of Education</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="" />
+        <meta name="author" content="http://webthemez.com" />
 
-</head>
-<body>
-<div id="wrapper">
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
+        <link href="css/jcarousel.css" rel="stylesheet" />
+        <link href="css/flexslider.css" rel="stylesheet" />
+        <link href="css/style.css" rel="stylesheet" />
 
-	<!-- start header -->
-		<header>
-        <div class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
-                </div>
-                <div class="navbar-collapse collapse ">
-                     <ul class="nav navbar-nav">
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
+    </head>
+    <body>
+         <div class="container">
+            <div class="row" style="background-color: green;">
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                    <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
+                    <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
+                </div>     
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                    <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
+                </div>        
+            </div>
+        </div>
+        <div id="wrapper">
+
+            <!-- start header -->
+            <header>
+                <div class="navbar navbar-default navbar-static-top">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+                        </div>
+                        <div class="navbar-collapse collapse ">
+                            <ul class="nav navbar-nav">
                                 <li><a href="index.html">Home</a></li> 
                                 <li><a href="objective.html">Objective</a></li>
                                 <li class="active"><a href="Academic_courses.html">Academic Classes</a></li>
@@ -44,122 +55,123 @@
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-	</header><!-- end header -->
-	<section id="inner-headline">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<h2 class="pageTitle">Academic Classes</h2>
-			</div>
-		</div>
-	</div>
-	</section>
-	 
-	<section id="content">
-		<div class="container">		 
-				
-<section class="course"> 
-
-		<div class="row">
-			<div class="col-lg-12">
-				<div class=""><h3>Courses We Offer</h3><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
-			</div>
-		</div>
-<div class="row">
-            <div class="col-md-6">
-			<div class="textbox clour1">
-                <h3>Hindi Medium(6 To 12)</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-            </div> </div>
-			<div class="col-md-6">
-			<div class="textbox clour3">
-                  <h3>English Medium(6 To 12)</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-            </div> </div>
-        </div>
-</section>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p> </br>  
-    </div>
-    </section>
-	 <footer>
+            </header><!-- end header -->
+            <section id="inner-headline">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4" align="center">
-                            <div class="widget">
-                                <h5 class="widgetheading text-info">Our Contact</h5>
-                                <address>
-                                    <p>Prayas Institute Of Education<br>
-                                        A/49, Near Railway Crossing,<br>
-                                        Phardhan, Lakhimpur Kheri
-                                    </p><br>
-                                    Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
-                                    E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
-                                </address>
-                            </div>
-                        </div>
-                        <div class="col-lg-4" align="center">
-                            <div class="widget">
-                                <h5 class="widgetheading text-info">Our Courses</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Academic Classes</a></li>
-                                    <li><a href="#">Competitive Exam Class</a></li>
-                                    <li><a href="#">Entrance Exam Classes</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-4" align="center">
-                            <div class="widget">
-                                <h5 class="widgetheading text-info">Quick Links</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Terms and conditions</a></li>
-                                    <li><a href="privacy.html">Privacy policy</a></li>
-                                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
-                                    <li><a href="contact.html">Contact us</a></li>
-                                </ul>
-                            </div>
+                        <div class="col-lg-12">
+                            <h2 class="pageTitle">Academic Classes</h2>
                         </div>
                     </div>
                 </div>
-                <div id="sub-footer">
-                    <div class="container">
+            </section>
+
+            <section id="content">
+                <div class="container">		 
+
+                    <section class="course"> 
+
                         <div class="row">
-                            <div class="col-lg-6">
-                                <div class="copyright">
-                                    <p>
-                                        <span>&copy; PIE All right reserved.<br>
-                                            Designed and Developed by - Pradeep Kumar
-                                        </span>
-                                    </p>
-                                </div>
+                            <div class="col-lg-12">
+                                <div class=""><h3>Courses We Offer</h3><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
                             </div>
-                            <div class="col-lg-6">
-                                <ul class="social-network">
-                                    <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-                                </ul>
-                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="textbox clour1">
+                                    <h3>Hindi Medium(6 To 12)</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                                </div> </div>
+                            <div class="col-md-6">
+                                <div class="textbox clour3">
+                                    <h3>English Medium(6 To 12)</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                                </div> </div>
+                        </div>
+                    </section>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p> </br>  
+                </div>
+            </section>
+        <footer><b>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4" align="center">
+                        <div class="widget">
+                            <h5 class="widgetheading text-info">Our Contact</h5>
+                            <address>
+                                <p>Prayas Institute Of Education<br>
+                                    A/49, Near Railway Crossing,<br>
+                                    Phardhan, Lakhimpur Kheri
+                                </p><br>
+                                Mobile:<a href="tel:+919956176774"> +91- 9956176774</a> ,
+                                <a href="tel:+919140779702"> +91-9140779702</a><br>
+                                E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
+                            </address>
+                        </div>
+                    </div>
+                    <div class="col-lg-4" align="center">
+                        <div class="widget">
+                            <h5 class="widgetheading text-info">Our Courses</h5>
+                            <ul class="link-list">
+                                <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-4" align="center">
+                        <div class="widget">
+                            <h5 class="widgetheading text-info">Quick Links</h5>
+                            <ul class="link-list">
+                                <li><a href="#">Terms and conditions</a></li>
+                                <li><a href="privacy.html">Privacy policy</a></li>
+                                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-            </footer>
+            </div>
+            <div id="sub-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="copyright">
+                                <p>
+                                    <span>&copy; PIE All right reserved.<br>
+                                        Designed and Developed by - Pradeep Kumar
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="social-network">
+                                <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div></b>
+        </footer>
         </div>
-        <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-        <!-- javascript-->
-        <script src="js/jquery.js"></script>
-        <script src="js/jquery.easing.1.3.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.fancybox.pack.js"></script>
-        <script src="js/jquery.fancybox-media.js"></script> 
-        <script src="js/Gallery/jquery.quicksand.js"></script>
-        <script src="js/Gallery/setting.js"></script>
-        <script src="js/jquery.flexslider.js"></script>
-        <script src="js/animate.js"></script>
-        <script src="js/custom.js"></script>
-        <script src="js/validate.js"></script>
+    <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
+    <!-- javascript-->
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.fancybox.pack.js"></script>
+    <script src="js/jquery.fancybox-media.js"></script> 
+    <script src="js/Gallery/jquery.quicksand.js"></script>
+    <script src="js/Gallery/setting.js"></script>
+    <script src="js/jquery.flexslider.js"></script>
+    <script src="js/animate.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/validate.js"></script>
     </body>
 </html>
