--- a/privacy.html
+++ b/privacy.html
@@ -14,6 +14,17 @@
         <link href="css/style.css" rel="stylesheet" />
     </head>
     <body>
+         <div class="container">
+            <div class="row" style="background-color: green;">
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                    <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
+                    <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
+                </div>     
+                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                    <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
+                </div>        
+            </div>
+        </div>
         <!-- start header -->
         <header>
             <div class="navbar navbar-default navbar-static-top">
@@ -193,83 +204,84 @@
                 </div><!-- .entry-content -->
             </div>
         </section>
-        <footer>
+        <footer><b>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4" align="center">
+                        <div class="widget">
+                            <h5 class="widgetheading text-info">Our Contact</h5>
+                            <address>
+                                <p>Prayas Institute Of Education<br>
+                                    A/49, Near Railway Crossing,<br>
+                                    Phardhan, Lakhimpur Kheri
+                                </p><br>
+                                Mobile:<a href="tel:+919956176774"> +91- 9956176774</a> ,
+                                <a href="tel:+919140779702"> +91-9140779702</a><br>
+                                E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
+                            </address>
+                        </div>
+                    </div>
+                    <div class="col-lg-4" align="center">
+                        <div class="widget">
+                            <h5 class="widgetheading text-info">Our Courses</h5>
+                            <ul class="link-list">
+                                <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-4" align="center">
+                        <div class="widget">
+                            <h5 class="widgetheading text-info">Quick Links</h5>
+                            <ul class="link-list">
+                                <li><a href="#">Terms and conditions</a></li>
+                                <li><a href="privacy.html">Privacy policy</a></li>
+                                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="sub-footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4" align="center">
-                            <div class="widget">
-                                <h5 class="widgetheading text-info">Our Contact</h5>
-                                <address>
-                                    <p>Prayas Institute Of Education<br>
-                                        A/49, Near Railway Crossing,<br>
-                                        Phardhan, Lakhimpur Kheri
-                                    </p><br>
-                                    Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
-                                    E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
-                                </address>
+                        <div class="col-lg-6">
+                            <div class="copyright">
+                                <p>
+                                    <span>&copy; PIE All right reserved.<br>
+                                        Designed and Developed by - Pradeep Kumar
+                                    </span>
+                                </p>
                             </div>
                         </div>
-                        <div class="col-lg-4" align="center">
-                            <div class="widget">
-                                <h5 class="widgetheading text-info">Our Courses</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Academic Classes</a></li>
-                                    <li><a href="#">Competitive Exam Class</a></li>
-                                    <li><a href="#">Entrance Exam Classes</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-4" align="center">
-                            <div class="widget">
-                                <h5 class="widgetheading text-info">Quick Links</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Terms and conditions</a></li>
-                                    <li><a href="privacy.html">Privacy policy</a></li>
-                                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
-                                    <li><a href="contact.html">Contact us</a></li>
-                                </ul>
-                            </div>
+                        <div class="col-lg-6">
+                            <ul class="social-network">
+                                <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
+                                <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <div id="sub-footer">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="copyright">
-                                    <p>
-                                        <span>&copy; PIE All right reserved.<br>
-                                            Designed and Developed by - Pradeep Kumar
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <ul class="social-network">
-                                    <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-                                    <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+            </div></b>
+        </footer>
         </div>
-        <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-        <!-- javascript-->
-        <script src="js/jquery.js"></script>
-        <script src="js/jquery.easing.1.3.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.fancybox.pack.js"></script>
-        <script src="js/jquery.fancybox-media.js"></script> 
-        <script src="js/Gallery/jquery.quicksand.js"></script>
-        <script src="js/Gallery/setting.js"></script>
-        <script src="js/jquery.flexslider.js"></script>
-        <script src="js/animate.js"></script>
-        <script src="js/custom.js"></script>
-        <script src="js/validate.js"></script>
+    <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
+    <!-- javascript-->
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.fancybox.pack.js"></script>
+    <script src="js/jquery.fancybox-media.js"></script> 
+    <script src="js/Gallery/jquery.quicksand.js"></script>
+    <script src="js/Gallery/setting.js"></script>
+    <script src="js/jquery.flexslider.js"></script>
+    <script src="js/animate.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/validate.js"></script>
     </body>
 </html>
